--- a/package.json
+++ b/package.json
@@ -5,7 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon index.js"
+    "watch": "nodemon index.js"
+  },
+  "engines": {
+    "node": ">=8.0.0"
   },
   "keywords": [
     "ingredients",
@@ -13,12 +16,18 @@
     "diet",
     "cuisines"
   ],
-  "author": "nishith chauhan",
-  "license": "MIT",
+  "author": "Nishith Chauhan",
+  "license": "GPL-3.0-or-later",
+  "bugs": {
+    "url": "https://github.com/GroceriStar/groceristar-fetch/issues"
+  },
+  "homepage": "https://github.com/GroceriStar/groceristar-fetch#readme",
   "dependencies": {
     "fs": "0.0.1-security"
   },
   "devDependencies": {
-    "nodemon": "^1.17.5"
+    "jest": "^23.2.0",
+    "nodemon": "^1.17.5",
+    "travis": "^0.1.1"
   }
 }
