--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "jest": "^23.2.0",
     "nodemon": "^1.17.5",
     "travis": "^0.1.1"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
