--- a/package.json
+++ b/package.json
@@ -42,6 +42,6 @@
   "bugs": {
     "url": "https://github.com/GroceriStar/groceristar-fetch/issues"
   },
-  "homepage": "https://github.com/GroceriStar/groceristar-fetch#readme",
+  "homepage": "https://github.com/GroceriStar/groceristar-fetch#readme"
   
 }
