--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "@groceristar/groceristar-fetch",
   "version": "1.1.10",
   "description": "npm module required to fetch static data required for recipe search",
-  "author": "Nishith Chauhan",
   "main": "index.js",
+  "engines": {
+    "node": ">9.0"
+  },
   "scripts": {
     "test": "jest",
     "watch": "nodemon index.js"
   },
-  "engines": {
-    "node": ">=8.0.0"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/GroceriStar/groceristar-fetch"
   },
   "keywords": [
     "ingredients",
@@ -22,14 +25,20 @@
     "grocery list",
     "measurements"
   ],
-  "dependencies": {
-    "fs": "0.0.1-security",
-    "underscore": "^1.9.1"
+  "author": "Nishith Chauhan",
+  "license": "GPL-3.0-or-later",
+  "bugs": {
+    "url": "https://github.com/GroceriStar/groceristar-fetch/issues"
   },
+  "homepage": "https://github.com/GroceriStar/groceristar-fetch#readme",
   "devDependencies": {
     "jest": "^23.2.0",
     "nodemon": "^1.17.5",
     "travis": "^0.1.1"
+  },
+  "dependencies": {
+    "fs": "0.0.1-security",
+    "underscore": "^1.9.1"
   },
   "jest": {
     "verbose": true,
@@ -37,10 +46,5 @@
   },
   "publishConfig": {
     "access": "public"
-  },
-  "license": "GPL-3.0-or-later",
-  "bugs": {
-    "url": "https://github.com/GroceriStar/groceristar-fetch/issues"
-  },
-  "homepage": "https://github.com/GroceriStar/groceristar-fetch#readme"
+  }
 }
