--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
   },
   "scripts": {
     "test": "jest",
-    "watch": "nodemon index.js",
+    "watch": "nodemon index .js",
     "playground": "nodemon projects/GroceriStar/playground.js",
+    "playground:s": "nodemon projects/Search/playground.js",
     "test:gs": "jest projects/GroceriStar/groceristar.test.js && jest  projects/GroceriStar/staticFiles.test.js"
   },
   "repository": {
