--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "test": "jest",
     "watch": "nodemon index .js",
-    "playground": "nodemon projects/GroceriStar/playground.js",
-    "playground:s": "nodemon projects/Search/playground.js",
+    "play:g": "nodemon projects/GroceriStar/playground.js",
+    "play:s": "nodemon projects/Search/playground.js",
     "test:gs": "jest projects/GroceriStar/groceristar.test.js && jest  projects/GroceriStar/staticFiles.test.js"
   },
   "repository": {
