--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   },
   "homepage": "https://groceristar.github.io/groceristar-fetch/",
   "devDependencies": {
+    "coveralls": "^3.0.2",
     "jest": "^23.2.0",
     "nodemon": "^1.17.5",
     "travis": "^0.1.1"
