--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "travis": "^0.1.1"
   },
   "dependencies": {
+    "dayjs": "^1.8.0",
     "fs": "0.0.1-security",
     "lodash": "^4.17.10",
     "underscore": "^1.9.1",
