--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   },
   "scripts": {
     "test": "jest",
-    "watch": "nodemon index .js",
+    "watch": "nodemon index.js",
     "play:g": "nodemon projects/GroceriStar/play.js",
     "play:s": "nodemon projects/Search/play.js",
     "play:r": "nodemon projects/ChickenKyiv/play.js",
     "play:l": "nodemon projects/GS-loopback/play.js",
-    "test:gs": "jest projects/GroceriStar/groceristar.test.js && jest projects/GroceriStar/staticFiles.test.js"
+    "test:gs": "jest projects/GroceriStar/groceristar.test.js && jest projects/GroceriStar/staticFiles.test.js",
+    "jsonlint": "node jsonlint.config.js"
   },
   "repository": {
     "type": "git",
@@ -40,7 +41,10 @@
     "coveralls": "^3.0.2",
     "jest": "^24.0.0",
     "jest-json-schema": "^2.0.1",
+    "jsonlint": "^1.6.3",
     "nodemon": "^1.17.5",
+    "path": "^0.12.7",
+    "shelljs": "^0.8.3",
     "travis": "^0.1.1"
   },
   "dependencies": {
