--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "play:r": "nodemon projects/ChickenKyiv/play.js",
     "play:l": "nodemon projects/GS-loopback/play.js",
     "test:gs": "jest projects/GroceriStar/groceristar.test.js && jest projects/GroceriStar/staticFiles.test.js",
+    "test:big": "jest projects/GroceriStar/getGroceriesWithDepIngKey.test.js",
     "jsonlint": "node jsonlint.config.js"
   },
   "devDependencies": {
