beautify code for the feature

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "scripts": {
     "test": "jest",
+    "test:prod":"standard && jest",
     "watch": "nodemon index.js",
     "play:g": "nodemon projects/GroceriStar/play.js",
     "play:s": "nodemon projects/Search/play.js",
@@ -15,7 +16,8 @@
     "play:l": "nodemon projects/GS-loopback/play.js",
     "test:gs": "jest projects/GroceriStar/groceristar.test.js && jest projects/GroceriStar/staticFiles.test.js",
     "test:big": "jest projects/GroceriStar/getGroceriesWithDepIngKey.test.js",
-    "jsonlint": "node jsonlint.config.js"
+    "jsonlint": "node jsonlint.config.js",
+    "code-fix": "standard --fix"
   },
   "devDependencies": {
     "@groceristar/sd-wrapper": "^1.0.1",
@@ -32,6 +34,7 @@
     "dayjs": "^1.8.0",
     "fs": "0.0.2",
     "lodash": "^4.17.10",
+    "standard": "^12.0.1",
     "underscore": "^1.9.1",
     "uuid": "3.3.2"
   },
