--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemon": "^1.17.5",
     "path": "^0.12.7",
     "shx": "^0.3.2",
+    "standard": "^12.0.1",
     "travis": "^0.1.1"
   },
   "dependencies": {
