--- a/package.json
+++ b/package.json
@@ -16,10 +16,21 @@
     "code-fix": "standard --fix"
   },
   "devDependencies": {
-    "coveralls": "^3.0.2",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.4.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.2.0",
+    "@babel/preset-env": "^7.4.1",
+    "babel-core": "^6.26.3",
+    "babel-jest": "^24.5.0",
+    "babel-plugin-module-resolver": "^3.2.0",
+    "coveralls": "^3.0.3",
     "jest": "^24.1.0",
     "nodemon": "^1.17.5",
     "path": "^0.12.7",
+    "rollup": "^1.6.0",
+    "rollup-plugin-babel": "^4.3.2",
+    "rollup-plugin-commonjs": "^9.2.1",
+    "rollup-plugin-node-resolve": "^4.0.1",
     "shx": "^0.3.2",
     "standard": "^12.0.1",
     "travis": "^0.1.1"
