--- a/package.json
+++ b/package.json
@@ -1,8 +1,6 @@
 {
   "name": "@groceristar/groceristar-fetch",
   "version": "1.2.19",
-  "description": "npm module required to fetch static data required for recipe search",
-  "main": "src/index.js",
   "scripts": {
     "test": "jest",
     "test:prod": "standard && jest",
@@ -13,7 +11,9 @@
     "play:l": "nodemon src/projects/GS-loopback/play.js",
     "test:gs": "jest src/projects/GroceriStar/groceristar.test.js && jest src/projects/GroceriStar/staticFiles.test.js",
     "test:big": "jest src/projects/GroceriStar/getGroceriesWithDepIngKey.test.js",
-    "code-fix": "standard --fix"
+    "code-fix": "standard --fix",
+    "build": "babel src -d dist",
+    "lint": "standard"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
@@ -43,12 +43,17 @@
     "underscore": "^1.9.1",
     "uuid": "3.3.2"
   },
+  "description": "npm module required to fetch static data required for recipe search",
+  "main": "dist/index.cjs",
+  "module": "dist/index.es.js",
+  "browser": "dist/index.iife.js",
   "files": [
     "/src/Import",
     "/src/projects",
     "/src/helper.js",
     "/src/index.js",
-    "/src/index.test.js"
+    "/src/index.test.js",
+    "dist"
   ],
   "repository": {
     "type": "git",
