--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "rollup": "^1.6.0",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.2.1",
+    "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^4.0.1",
     "shx": "^0.3.2",
     "standard": "^12.0.1",
