--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "uuid": "3.3.2"
   },
   "description": "npm module required to fetch static data required for recipe search",
-  "main": "dist/index.cjs",
+  "xxx":"dist/index.cjs",
+  "main": "dist/index.js",
   "module": "dist/index.es.js",
   "browser": "dist/index.iife.js",
   "files": [
