--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@babel/core": "^7.4.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/preset-env": "^7.4.1",
-    "babel-core": "^6.26.3",
+    "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^24.5.0",
     "babel-plugin-module-resolver": "^3.2.0",
     "coveralls": "^3.0.3",
@@ -43,7 +43,7 @@
     "travis": "^0.1.1"
   },
   "dependencies": {
-    "@groceristar/sd-wrapper": "^2.0.8",
+    "@groceristar/sd-wrapper": "^2.0.9",
     "dayjs": "^1.8.0",
     "fs": "0.0.2",
     "lodash": "^4.17.10",
