--- a/package.json
+++ b/package.json
@@ -51,7 +51,9 @@
     "uuid": "^3.3.2"
   },
   "description": "npm module required to fetch static data required for recipe search",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.es.js",
+  "browser": "dist/index.iife.js",
   "files": [
     "/src/projects",
     "/src/helper.js",
