--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "dayjs": "^1.8.12",
     "fs": "0.0.2",
     "lodash": "^4.17.10",
+    "raven-js": "^3.27.1",
     "underscore": "^1.9.1",
     "uuid": "^3.3.2"
   },
