--- a/src/projects-v2/MealCalendar/package.json
+++ b/src/projects-v2/MealCalendar/package.json
@@ -1,18 +1,11 @@
 {
-  "name": "@groceristar/groceristar-fetch",
-  "version": "2.2.0",
+  "name": "@groceristar/gs-fetch-meal-calendar",
+  "version": "0.0.1",
   "scripts": {
     "test": "jest",
     "test:prod": "standard && jest",
     "watch": "nodemon src/index.js",
-    "play:g": "nodemon src/projects/GroceriStar/play.js",
-    "play:s": "nodemon src/projects/Search/play.js",
-    "play:r": "nodemon src/projects/ChickenKyiv/play.js",
-    "play:l": "nodemon src/projects/GS-loopback/play.js",
-    "play:u": "nodemon src/projects/UnitConvertion/play.js",
-    "test:gs": "jest src/projects/GroceriStar/groceristar.test.js && jest src/projects/GroceriStar/staticFiles.test.js",
-    "test:big": "jest src/projects/GroceriStar/getGroceriesWithDepIngKey.test.js",
-    "test:index": "jest src/index.test.js",
+    "play": "nodemon src/index.js",
     "code-fix": "standard --fix",
     "build": "babel src -d dist",
     "lint": "standard",
@@ -31,25 +24,23 @@
     "babel-plugin-module-resolver": "3.2.0",
     "coveralls": "3.0.4",
     "jest": "24.8.0",
-    "jsonfile": "5.0.0",
     "nodemon": "1.19.1",
     "path": "0.12.7",
-    "rollup": "1.15.6",
-    "rollup-plugin-babel": "4.3.2",
-    "rollup-plugin-commonjs": "10.0.0",
-    "rollup-plugin-node-builtins": "2.1.2",
-    "rollup-plugin-node-resolve": "5.0.3",
+    "rollup": "^1.16.2",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-resolve": "^5.0.4",
     "shx": "0.3.2",
     "standard": "12.0.1",
     "travis": "0.1.1"
   },
   "dependencies": {
-    "@groceristar/sd-wrapper": "^4.9.2",
+    "@groceristar/sd-wrapper": "^4.11.1",
     "dayjs": "^1.8.12",
     "fs": "0.0.2",
     "lodash": "^4.17.10",
     "raven-js": "^3.27.1",
-    "underscore": "^1.9.1",
     "uuid": "^3.3.2"
   },
   "description": "npm module required to fetch static data required for recipe search",
@@ -57,28 +48,18 @@
   "module": "dist/index.es.js",
   "browser": "dist/index.iife.js",
   "files": [
-    "/src/projects",
-    "/src/helper.js",
-    "/src/index.js",
-    "/src/index.test.js",
     "dist"
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/GroceriStar/groceristar-fetch"
+    "url": "xxx"
   },
   "keywords": [
-    "ingredients",
-    "allergies",
-    "diet",
-    "cuisines",
-    "nutritions",
-    "recipes",
     "meal calendar",
     "grocery list",
-    "measurements"
+    "recipes"
   ],
-  "author": "Nishith Chauhan",
+  "author": "Arthur Tkachenko",
   "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/GroceriStar/groceristar-fetch/issues"
