--- a/src/projects-v2/UnitConvertion/package.json
+++ b/src/projects-v2/UnitConvertion/package.json
@@ -60,7 +60,7 @@
     "grocery list",
     "measurements"
   ],
-  "author": "XXX",
+  "author": "Arthur Tkachenko",
   "license": "XXX",
   "bugs": {
     "url": "https://github.com/GroceriStar/groceristar-fetch/issues"
