--- a/src/projects-v2/Recipes/package.json
+++ b/src/projects-v2/Recipes/package.json
@@ -65,7 +65,7 @@
     "grocery list",
     "measurements"
   ],
-  "author": "Nishith Chauhan",
+  "author": "Arthur Tkachenko",
   "license": "GPL-3.0-or-later",
   "bugs": {
     "url": "https://github.com/GroceriStar/groceristar-fetch/issues"
