--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "babel-jest": "24.8.0",
     "babel-plugin-module-resolver": "3.2.0",
     "coveralls": "3.0.4",
-    "jest": "24.8.0",
+    "jest": "^24.8.0",
     "jsonfile": "5.0.0",
     "nodemon": "1.19.1",
     "path": "0.12.7",
