--- a/src/projects-v2/UnitConvertion/package.json
+++ b/src/projects-v2/UnitConvertion/package.json
@@ -5,8 +5,7 @@
     "test": "jest",
     "test:prod": "standard && jest",
     "watch": "nodemon src/index.js",
-    "play": "nodemon src/projects/GroceriStar/play.js",
-    "test": "jest",
+    "play": "nodemon src/play.js",
     "code-fix": "standard --fix",
     "build": "babel src -d dist",
     "lint": "standard",
