--- a/src/projects-v2/MealCalendar/package.json
+++ b/src/projects-v2/MealCalendar/package.json
@@ -2,7 +2,7 @@
   "name": "@groceristar/gs-fetch-meal-calendar",
   "version": "0.0.1",
   "scripts": {
-    "test": "jest",
+    "test": "jest dist",
     "test:prod": "standard && jest",
     "watch": "nodemon src/index.js",
     "play": "nodemon src/play.js",
