--- a/src/projects-v2/recipe-search-backend/package.json
+++ b/src/projects-v2/recipe-search-backend/package.json
@@ -6,13 +6,13 @@
     "test:prod": "standard && jest",
     "watch": "nodemon src/index.js",
     "play": "nodemon src/play.js",
+    "code-fix": "standard --fix",
+    "build": "babel src -d dist",
     "lint": "standard",
     "bundle": "rollup -c",
-    "build": "npm run clean && babel src -d dist",
-    "build:rollup": "npm run clean && npm run bundle",
     "dev": "rollup -c -w",
-    "clean": "shx rm -rf ./coverage && shx rm -rf ./dist",
-    "code-fix": "standard --fix"
+    "build:rollup": "npm run clean && npm run bundle",
+    "clean": "shx rm -rf ./coverage && shx rm -rf ./dist"
   },
   "devDependencies": {
     "@babel/cli": "7.4.4",
@@ -27,7 +27,7 @@
     "nodemon": "1.19.1",
     "path": "0.12.7",
     "rollup": "1.15.6",
-    "rollup-plugin-babel": "4.3.3",
+    "rollup-plugin-babel": "4.3.2",
     "rollup-plugin-commonjs": "10.0.0",
     "rollup-plugin-node-builtins": "2.1.2",
     "rollup-plugin-node-resolve": "5.0.3",
@@ -41,7 +41,6 @@
     "fs": "0.0.2",
     "lodash": "^4.17.10",
     "raven-js": "^3.27.1",
-    "underscore": "^1.9.1",
     "uuid": "^3.3.2"
   },
   "description": "npm module required to fetch static data required for recipe search",
@@ -49,7 +48,6 @@
   "module": "dist/index.es.js",
   "browser": "dist/index.iife.js",
   "files": [
-
     "dist"
   ],
   "repository": {
