--- a/src/projects-v2/GroceryLists/package.json
+++ b/src/projects-v2/GroceryLists/package.json
@@ -4,8 +4,8 @@
   "scripts": {
     "test": "jest",
     "test:prod": "standard && jest",
-    "watch": "nodemon src/index.js",
-    "play": "nodemon src/play.js",
+    "watch": "nodemon dist/index.js",
+    "play": "nodemon dist/play.js",
     "lint": "standard",
     "bundle": "rollup -c",
     "build": "npm run clean && babel src -d dist",
@@ -49,7 +49,6 @@
   "module": "dist/index.es.js",
   "browser": "dist/index.iife.js",
   "files": [
-
     "dist"
   ],
   "repository": {
