--- a/src/projects-v2/showcase-grocery-lists/package.json
+++ b/src/projects-v2/showcase-grocery-lists/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@groceristar/groceristar-fetch",
-  "version": "0.0.1",
+  "name": "@groceristar/f-showcase",
+  "version": "0.0.2",
   "scripts": {
     "test": "jest",
     "test:prod": "standard && jest",
