--- a/src/projects-v2/GSLoopback/package.json
+++ b/src/projects-v2/GSLoopback/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@groceristar/groceristar-fetch",
+  "name": "@groceristar/f-loopback",
   "version": "0.0.1",
   "scripts": {
     "test": "jest",
