--- a/src/projects-v2/GroceryLists/package.json
+++ b/src/projects-v2/GroceryLists/package.json
@@ -5,7 +5,8 @@
     "test": "jest",
     "test:prod": "standard && jest",
     "watch": "nodemon dist/index.js",
-    "play": "nodemon dist/play.js",
+    "play": "node dist/play.js",
+    "play2": "nodemon dist/play.js",
     "lint": "standard",
     "bundle": "rollup -c",
     "build": "npm run clean && babel src -d dist",
@@ -26,11 +27,11 @@
     "jest": "24.8.0",
     "nodemon": "1.19.1",
     "path": "0.12.7",
-    "rollup": "1.15.6",
-    "rollup-plugin-babel": "4.3.3",
-    "rollup-plugin-commonjs": "10.0.0",
-    "rollup-plugin-node-builtins": "2.1.2",
-    "rollup-plugin-node-resolve": "5.0.3",
+    "rollup": "^1.16.2",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-resolve": "^5.1.0",
     "shx": "0.3.2",
     "standard": "12.0.1",
     "travis": "0.1.1"
