--- a/src/projects-v2/Measurements/package.json
+++ b/src/projects-v2/Measurements/package.json
@@ -36,6 +36,7 @@
     "travis": "0.1.1"
   },
   "dependencies": {
+    "@groceristar/mini-sd": "^0.1.1",
     "@groceristar/sd-wrapper": "^4.11.1",
     "dayjs": "^1.8.12",
     "fs": "0.0.2",
