--- a/src/projects-v2/GroceryLists/package.json
+++ b/src/projects-v2/GroceryLists/package.json
@@ -16,8 +16,8 @@
     "code-fix": "standard --fix"
   },
   "devDependencies": {
-    "@babel/cli": "7.4.4",
-    "@babel/core": "7.4.5",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/preset-env": "7.4.5",
     "babel-core": "7.0.0-bridge.0",
@@ -29,7 +29,7 @@
     "path": "0.12.7",
     "rollup": "^1.16.2",
     "rollup-plugin-babel": "^4.3.3",
-    "rollup-plugin-commonjs": "^10.0.0",
+    "rollup-plugin-commonjs": "^10.0.1",
     "rollup-plugin-node-builtins": "^2.1.2",
     "rollup-plugin-node-resolve": "^5.1.0",
     "shx": "0.3.2",
