--- a/src/projects-v2/UnitConvertion/package.json
+++ b/src/projects-v2/UnitConvertion/package.json
@@ -15,8 +15,8 @@
     "clean": "shx rm -rf ./coverage && shx rm -rf ./dist"
   },
   "devDependencies": {
-    "@babel/cli": "7.4.4",
-    "@babel/core": "7.4.5",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/preset-env": "7.4.5",
     "babel-core": "7.0.0-bridge.0",
@@ -25,11 +25,11 @@
     "jest": "24.8.0",
     "nodemon": "1.19.1",
     "path": "0.12.7",
-    "rollup": "1.15.6",
-    "rollup-plugin-babel": "4.3.2",
-    "rollup-plugin-commonjs": "10.0.0",
-    "rollup-plugin-node-builtins": "2.1.2",
-    "rollup-plugin-node-resolve": "5.0.3",
+    "rollup": "^1.16.2",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.0.1",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-resolve": "^5.1.0",
     "shx": "0.3.2",
     "standard": "12.0.1",
     "travis": "0.1.1"
