--- a/src/projects-v2/recipe-search-backend/package.json
+++ b/src/projects-v2/recipe-search-backend/package.json
@@ -6,18 +6,17 @@
     "test:prod": "standard && jest",
     "watch": "nodemon src/index.js",
     "play": "nodemon src/play.js",
-    "code-fix": "standard --fix",
+    "code-fix": "echo 'code-fix me'",
     "build": "babel src -d dist",
     "lint": "standard",
     "bundle": "rollup -c",
     "dev": "rollup -c -w",
     "build:rollup": "npm run clean && npm run bundle",
-    "clean": "shx rm -rf ./coverage && shx rm -rf ./dist",
-    "code-fix":"echo 'code-fix me'"
+    "clean": "shx rm -rf ./coverage && shx rm -rf ./dist"
   },
   "devDependencies": {
-    "@babel/cli": "7.4.4",
-    "@babel/core": "7.4.5",
+    "@babel/cli": "^7.4.4",
+    "@babel/core": "^7.4.5",
     "@babel/plugin-syntax-dynamic-import": "7.2.0",
     "@babel/preset-env": "7.4.5",
     "babel-core": "7.0.0-bridge.0",
@@ -27,11 +26,11 @@
     "jest": "24.8.0",
     "nodemon": "1.19.1",
     "path": "0.12.7",
-    "rollup": "1.15.6",
-    "rollup-plugin-babel": "4.3.2",
-    "rollup-plugin-commonjs": "10.0.0",
-    "rollup-plugin-node-builtins": "2.1.2",
-    "rollup-plugin-node-resolve": "5.0.3",
+    "rollup": "^1.16.2",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.0.1",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-resolve": "^5.1.0",
     "shx": "0.3.2",
     "standard": "12.0.1",
     "travis": "0.1.1"
