loadsh-es trying to fix and issue/warning from rollup

--- a/src/projects-v2/GroceryLists/package.json
+++ b/src/projects-v2/GroceryLists/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-env": "7.4.5",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "24.8.0",
+    "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-module-resolver": "3.2.0",
     "coveralls": "3.0.4",
     "jest": "24.8.0",
@@ -42,6 +43,7 @@
     "dayjs": "^1.8.12",
     "fs": "0.0.2",
     "lodash": "^4.17.10",
+    "lodash-es": "^4.17.11",
     "raven-js": "^3.27.1",
     "underscore": "^1.9.1",
     "uuid": "^3.3.2"
