mini-fetch changes in order to publish it on npm

--- a/src/projects-v2/mini-fetch/package.json
+++ b/src/projects-v2/mini-fetch/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@groceristar/groceristar-fetch",
+  "name": "@groceristar/mini-fetch",
   "version": "2.2.0",
   "scripts": {
     "test": "jest",
