--- a/src/projects-v2/mini-fetch/package.json
+++ b/src/projects-v2/mini-fetch/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@groceristar/mini-fetch",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "scripts": {
     "test": "jest",
     "test:prod": "standard && jest",
@@ -38,6 +38,7 @@
     "travis": "0.1.1"
   },
   "dependencies": {
+    "@groceristar/mini-sd": "^0.1.5",
     "@groceristar/sd-wrapper": "^4.11.3",
     "dayjs": "^1.8.12",
     "fs": "0.0.2",
